syntax = "proto3";

option csharp_namespace = "UserService.Proto";

package UserService;

message GetServiceSettingRequest{}
